@@ -1,5 +1,6 @@
 ncmpc 0.19 - not yet released
 * require libmpdclient 2.2
+* show real server address in status message
 
 
 ncmpc 0.18 - (09/22/2010)
